examples/test/testpolicy11393.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11393
  namespace: namespace352
spec:
  podSelector:
    matchLabels:
      key8: value17
      key46: value42
      key6: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value26
          key0: value4
          key42: value25
      podSelector:
        matchLabels:
          key11: value1
          key41: value8
